Basic recreation of the ChatGPT homepage

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav {
 }
 
 .box {
-    background-image: url("images/colored-bg.png");
+    background-image: url("Images/colored-bg.png");
     width: 1733px;
     height: 686px;
     border-radius: 5px;
